--- a/index.html
+++ b/index.html
@@ -4,49 +4,59 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
+  <!-- Stylesheet Link -->
+  <link rel="stylesheet" type="text/css" href="stylesheet.css">
   <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon-32x32.png">
-  
+   <!-- Font Links  -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
   <title>Frontend Mentor | Newsletter sign-up form with success message</title>
-
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
+  
 </head>
 <body>
 
   <!-- Sign-up form start -->
+  <div class="container-sign-up">
+<div class="sign-up-form">
 
-  Stay updated!
+ <h1> Stay updated! </h1>
 
-  Join 60,000+ product managers receiving monthly updates on:
+<p>  Join 60,000+ product managers receiving monthly updates on: </p>
 
-  Product discovery and building what matters
-  Measuring to ensure updates are a success
-  And much more!
+<p> <img src="/assets/images/icon-list.svg" alt=""> Product discovery and building what matters</p>
+<p> <img src="/assets/images/icon-list.svg" alt=""> Measuring to ensure updates are a success</p>
+<p> <img src="/assets/images/icon-list.svg" alt=""> And much more!</p>
 
-  Email address
-  email@company.com
+  <h4>Email address</h4>
+  <input type="email" email@company.com > 
 
-  Subscribe to monthly newsletter
+  <button>Subscribe to monthly newsletter</button>
 
-  <!-- Sign-up form end -->
+ <!-- Sign-up form end -->
+  </div>
+  <div class="main-image"> 
+    <img src="/assets/images/illustration-sign-up-desktop.svg" alt="">
+  </div>
+</div>
 
   <!-- Success message start -->
+<div class="success"> 
+ <p> Thanks for subscribing!</p>
 
-  Thanks for subscribing!
+</p> A confirmation email has been sent to ash@loremcompany.com. 
+  Please open it and click the button inside to confirm your subscription.</p>
 
-  A confirmation email has been sent to ash@loremcompany.com. 
-  Please open it and click the button inside to confirm your subscription.
-
-  Dismiss message
-
+<button>  Dismiss message </button>
   <!-- Success message end -->
-  
+</div>
+
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="#">Your Name Here</a>.
   </div>
+
+  <script src="app.js"></script>
+
 </body>
 </html>
