--- a/index.html
+++ b/index.html
@@ -23,15 +23,20 @@
  <h1> Stay updated! </h1>
 
 <p>  Join 60,000+ product managers receiving monthly updates on: </p>
-
+<div>
 <p> <img src="/assets/images/icon-list.svg" alt=""> Product discovery and building what matters</p>
 <p> <img src="/assets/images/icon-list.svg" alt=""> Measuring to ensure updates are a success</p>
 <p> <img src="/assets/images/icon-list.svg" alt=""> And much more!</p>
+</div>
 
-  <h4>Email address</h4>
-  <input type="email" email@company.com > 
+  <form>
+    <label for="fname">Email Address</label><br>
+    <input type="email" id="email" name="email"
+  placeholder="email@company.com"> 
+  <button type="submit" >Subscribe to monthly newsletter</button> 
+  </form>
 
-  <button>Subscribe to monthly newsletter</button>
+
 
  <!-- Sign-up form end -->
   </div>
