--- a/index.html
+++ b/index.html
@@ -17,26 +17,24 @@
 <body>
 
   <!-- Sign-up form start -->
-  <div class="container-sign-up">
+  <div id="container-sign-up">
 <div class="sign-up-form">
 
  <h1> Stay updated! </h1>
 
 <p>  Join 60,000+ product managers receiving monthly updates on: </p>
 <div>
-<p> <img src="/assets/images/icon-list.svg" alt=""> Product discovery and building what matters</p>
-<p> <img src="/assets/images/icon-list.svg" alt=""> Measuring to ensure updates are a success</p>
-<p> <img src="/assets/images/icon-list.svg" alt=""> And much more!</p>
+<p> <img src="/assets/images/icon-list.svg" alt="tick picture"> Product discovery and building what matters</p>
+<p> <img src="/assets/images/icon-list.svg" alt="tick picture"> Measuring to ensure updates are a success</p>
+<p> <img src="/assets/images/icon-list.svg" alt="tick picture"> And much more!</p>
 </div>
 
-  <form>
-    <label for="fname">Email Address</label><br>
+  <form id="submit-form">
+    <label for="email">Email Address</label><br>
     <input type="email" id="email" name="email"
   placeholder="email@company.com"> 
   <button type="submit" >Subscribe to monthly newsletter</button> 
   </form>
-
-
 
  <!-- Sign-up form end -->
   </div>
@@ -46,10 +44,11 @@
 </div>
 
   <!-- Success message start -->
-<div class="success"> 
- <p> Thanks for subscribing!</p>
+<div id="success"> 
+  <img src="/assets/images/icon-list.svg" alt="tick picture">
+ <h1> Thanks for subscribing!</h1>
 
-</p> A confirmation email has been sent to ash@loremcompany.com. 
+<p> A confirmation email has been sent to ash@loremcompany.com. 
   Please open it and click the button inside to confirm your subscription.</p>
 
 <button>  Dismiss message </button>
