Functionality added to dismiss button to reload the sign up page

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 <p> A confirmation email has been sent to ash@loremcompany.com. 
   Please open it and click the button inside to confirm your subscription.</p>
 
-<button>  Dismiss message </button>
+<button id="dismiss-button" type="submit">  Dismiss message </button>
   <!-- Success message end -->
 </div>
 
