mobile layout for sign up page completed

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 
   <!-- Sign-up form start -->
   <div id="container-sign-up">
+
 <div class="sign-up-form">
 
  <h1> Stay updated! </h1>
@@ -34,18 +35,24 @@
     <!-- <input type="text" id="email-input" name="email" -->
   <!-- placeholder="email@company.com" />  -->
   <label for="email">Email</label>
-  <input type="text" id="email" placeholder="Enter email" />
   <small>Error Message</small>
+  <input type="text" id="email" placeholder="Enter email" />
+
   <button type="submit" >Subscribe to monthly newsletter</button> 
   </form>
-
-
- <!-- Sign-up form end -->
   </div>
+
   <div class="main-image"> 
     <img src="/assets/images/illustration-sign-up-desktop.svg" alt="">
   </div>
+
+  <div class="mobile-image">
+    <img src="/assets/images/illustration-sign-up-mobile.svg" alt="">
+  </div>
 </div>
+
+ <!-- Sign-up form end -->
+ 
 
   <!-- Success message start -->
 <div id="success"> 
