--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
 
 <p>  Join 60,000+ product managers receiving monthly updates on: </p>
 <div>
-<p> <img src="assets/images/icon-list.svg" alt="tick picture"> Product discovery and building what matters</p>
-<p> <img src="assets/images/icon-list.svg" alt="tick picture"> Measuring to ensure updates are a success</p>
-<p> <img src="assets/images/icon-list.svg" alt="tick picture"> And much more!</p>
+<p> <img src="./assets/images/icon-list.svg" alt="tick picture"> Product discovery and building what matters</p>
+<p> <img src="./assets/images/icon-list.svg" alt="tick picture"> Measuring to ensure updates are a success</p>
+<p> <img src="./assets/images/icon-list.svg" alt="tick picture"> And much more!</p>
 </div>
 
   
@@ -42,11 +42,11 @@
   </div>
 
   <div class="main-image"> 
-    <img src="assets/images/illustration-sign-up-desktop.svg" alt="">
+    <img src="./assets/images/illustration-sign-up-desktop.svg" alt="">
   </div>
 
   <div class="mobile-image">
-    <img src="assets/images/illustration-sign-up-mobile.svg" alt="">
+    <img src="./assets/images/illustration-sign-up-mobile.svg" alt="">
   </div>
 </div>
 
@@ -55,7 +55,7 @@
 
   <!-- Success message start -->
 <div id="success"> 
-  <img src="/assets/images/icon-list.svg" alt="tick picture">
+  <img src="./assets/images/icon-list.svg" alt="tick picture">
  <h1> Thanks for subscribing!</h1>
 
 <p> A confirmation email has been sent to <span id="email-update"> </span>. 
